[package]
name = "exiftool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.1"
tokio = { version = "1.21.2", features = [ "sync" ] }

serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
